<resources>
    <string name="app_name">MaterialDesignIO</string>
    <string name="home">Home</string>
    <string name="subway">Subway</string>
    <string name="star">Star</string>
    <string name="dark">Dark</string>
    <string name="wheeler">Wheeler</string>
    <string name="textview">Англи́йский язык (самоназвание — English, the English language) — язык англо-фризской подгруппы западной группы германской ветви индоевропейской языковой семьи. Английский язык — важнейший международный язык[5], что является следствием колониальной политики Британской империи в XIX веке и мирового влияния Соединённых Штатов Америки в XX—XXI веках[6]. Существует значительное разнообразие диалектов и говоров английского языка.
Английский язык возник в раннем Средневековье как потомок англо-саксонского языка, на котором говорили англосаксы. Он стал родным для большинства населения Великобритании, а с территориальным ростом Британской империи распространился в Азию, Африку, Северную Америку и Австралию. После обретения независимости британскими колониями английский язык остался либо родным языком большей части населения (США, Канада, Австралия, Новая Зеландия), либо одним из Англи́йский язык (самоназвание — English, the English language) — язык англо-фризской подгруппы западной группы германской ветви индоевропейской языковой семьи. Английский язык — важнейший международный язык[5], что является следствием колониальной политики Британской империи в XIX веке и мирового влияния Соединённых Штатов Америки в XX—XXI веках[6]. Существует значительное разнообразие диалектов и говоров английского языка.
Английский язык возник в раннем Средневековье как потомок англо-саксонского языка, на котором говорили англосаксы. Он стал родным для большинства населения Великобритании, а с территориальным ростом Британской империи распространился в Азию, Африку, Северную Америку и Австралию. После обретения независимости британскими колониями английский язык остался либо родным языком большей части населения (США, Канада, Австралия, Новая Зеландия), либо одним из официальных языков (Индия, Нигерия). Английский язык изучают в образовательных учреждениях многих стран как иностранный.
Содержание
1	Лингвогеография
1.1	Вариативность английского языка
1.1.1	Варианты английского языка. Национальные варианты
1.1.2	Диалекты
1.1.2.1	Англия
1.1.2.2	Шотландия, Уэльс и Ирландия
1.1.2.3	Северная Америка
1.1.2.4	Индия
1.1.2.5	Иные
1.1.2.6	Псевдодиалекты
2	История
2.1	Древнеанглийский период
2.2	Среднеанглийский период
2.3	Новоанглийский период
официальных языков (Индия, Нигерия). Английский язык изучают в образовательных учреждениях многих стран как иностранный.
Содержание
1	Лингвогеография
1.1	Вариативность английского языка
1.1.1	Варианты английского языка. Национальные варианты
1.1.2	Диалекты
1.1.2.1	Англия
1.1.2.2	Шотландия, Уэльс и Ирландия
1.1.2.3	Северная Америка
1.1.2.4	Индия
1.1.2.5	Иные
1.1.2.6	Псевдодиалекты
2	История
2.1	Древнеанглийский период
2.2	Среднеанглийский период
2.3	Новоанглийский период
</string>
</resources>